// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-range-slider-thumb Rendering should have aria attributes 1`] = `
<as-range-slider-thumb
  class="hydrated"
>
  
  <div
    aria-valuemax="10"
    aria-valuemin="0"
    aria-valuenow="5"
    aria-valuetext="5€"
    class="as-range-slider__thumb"
    data-value="5"
    role="slider"
    tabindex="0"
  >
    <span
      class="as-range-slider__value as-caption as-font-medium"
    >
      5€
    </span>
  </div>
</as-range-slider-thumb>
`;

exports[`as-range-slider-thumb Rendering should render a text with its value 1`] = `
<as-range-slider-thumb
  class="hydrated"
>
  
  <div
    aria-valuenow="5"
    aria-valuetext="5€"
    class="as-range-slider__thumb"
    data-value="5"
    role="slider"
    tabindex="0"
  >
    <span
      class="as-range-slider__value as-caption as-font-medium"
    >
      5€
    </span>
  </div>
</as-range-slider-thumb>
`;
